# gmod-gpu-particle-system

./: README.md  check_gmod_renderer.lua  check_particle_def.lua  console_test.lua  launch_gmod_test.bat  run_diagnostics.lua  test_debug.lua  test_huge_particle.lua  test_particles.lua
gmod_addon/starwars_particles/: addon.json
gmod_addon/starwars_particles/lua/autorun/client/: cl_particles.lua
gmod_addon/starwars_particles/lua/autorun/server/: sv_particles.lua
gmod_addon/starwars_particles/lua/autorun/shared/: sh_particle_list.lua
gmod_addon/starwars_particles/particles/shaders/: particle_emit.comp
gmod_addon/starwars_particles/shaders/: particle_ps.hlsl  particle_vs.hlsl
gmod_module/: BUILD.md  CMakeLists.txt  SETUP_GMOD_SDK.md  build.bat  build.sh  install_to_gmod.bat  setup_sdk.bat  setup_sdk.sh
gmod_module/include/: opengl_includes.h
gmod_module/shaders/: particle.frag  particle_update.comp
gmod_module/source/: particle_data.cpp  particle_data.h
gmod_module/source/client/: compute_shader.cpp  compute_shader.h  cpu_particle_simulator.cpp  cpu_particle_simulator.h  d3d9_hook.cpp  d3d9_hook.h  dx9_context.cpp  dx9_context.h  dx9_particle_renderer.cpp  dx9_particle_renderer.h  gpu_context.cpp  gpu_context.h  gpu_particle_engine.cpp  gpu_particle_engine.h  lua_api_client.cpp  lua_api_client_dx9.cpp  main_client.cpp  material_system_helper.cpp  material_system_helper.h  particle_loader.cpp  particle_loader.h  particle_renderer.cpp  particle_renderer.h
gmod_module/source/server/: main_server.cpp
tests/: test_basic.gpart
unity_exporter/UnityProject/Assets/Editor/: GModParticleExporter.cs  ParticleDataStructures.cs
